# todo-term

./: Cargo.toml
src/: action_display.rs  app.rs  handler.rs  key_sequencer.rs  lib.rs  main.rs  todo.rs  ui.rs
src/todo_serializer/: json_serializer.rs  mod.rs
