[package]
name = "todo-term"
version = "0.1.0"
authors = ["Ege Gungordu <egegungorduu@hotmail.com>"]
license = "MIT"
edition = "2021"

[dependencies]
crossterm = "0.27.0"
rand = "0.8.5"
ratatui = { version = "0.24.0", features = ["widget-calendar"] }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
time = "0.3.31"
